Neural Network Base, Conda Environment

--- a/G10_RV.ipynb
+++ b/G10_RV.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m r2_score\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +248,7 @@
        "2024-03-25  0.6540  0.6003  151.42  10.7165  0.8994   4.9587  "
       ]
      },
-     "execution_count": 216,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,6 +655,363 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simple Ridge Model\n",
+    "##### Choose one of the rates as a target, and use the others as predictors. We choose a given t value, and then calculate continuous changes in all rates for that t value. Then we regress changes in target against changes in predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predictor</th>\n",
+       "      <th>y: US</th>\n",
+       "      <th>y: Germany</th>\n",
+       "      <th>y: UK</th>\n",
+       "      <th>y: France</th>\n",
+       "      <th>y: Australia</th>\n",
+       "      <th>y: Canada</th>\n",
+       "      <th>y: New Zealand</th>\n",
+       "      <th>y: Japan</th>\n",
+       "      <th>y: Switzerland</th>\n",
+       "      <th>y: Norway</th>\n",
+       "      <th>y: Italy</th>\n",
+       "      <th>ABS Mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>US</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>-1.38</td>\n",
+       "      <td>0.447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UK</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>France</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>0.448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>0.152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.22</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>0.126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Training r2</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Testing r2</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Predictor y: US y: Germany y: UK y: France y: Australia y: Canada  \\\n",
+       "0            US  None       0.07  0.28     -0.03         0.09      0.58   \n",
+       "1       Germany  0.35       None  0.54      0.72        -0.04      0.29   \n",
+       "2            UK  0.12       0.04  None      0.02        -0.04     -0.06   \n",
+       "3        France -0.16       0.79  0.22      None         0.07      0.08   \n",
+       "4     Australia  0.06       -0.0 -0.05      0.01         None      0.11   \n",
+       "5        Canada   0.6       0.06 -0.15      0.01         0.17      None   \n",
+       "6   New Zealand -0.02       0.01 -0.01       0.0         0.41      0.05   \n",
+       "7         Japan  0.05      -0.03 -0.22      0.06         0.84     -0.12   \n",
+       "8   Switzerland -0.15       0.16  0.16      0.06         0.09     -0.12   \n",
+       "9        Norway  0.09       0.04  0.04     -0.02         0.11      0.12   \n",
+       "10        Italy  0.02      -0.13  0.08      0.22         0.06     -0.05   \n",
+       "11                                                                        \n",
+       "12  Training r2  0.81       0.96  0.69      0.97         0.76      0.82   \n",
+       "13   Testing r2  0.86       0.97  0.69      0.99         0.75      0.82   \n",
+       "\n",
+       "   y: New Zealand y: Japan y: Switzerland y: Norway y: Italy ABS Mean  \n",
+       "0           -0.04     0.01          -0.11      0.16     0.03     0.14  \n",
+       "1            0.16    -0.03           0.62      0.34    -1.38    0.447  \n",
+       "2           -0.01    -0.02           0.05      0.03     0.07    0.046  \n",
+       "3            0.03     0.06           0.24     -0.25     2.58    0.448  \n",
+       "4            0.61     0.09           0.04      0.12     0.08    0.117  \n",
+       "5            0.11    -0.02          -0.09      0.21     -0.1    0.152  \n",
+       "6            None    -0.02           0.01      0.04     0.01    0.058  \n",
+       "7           -0.27     None           0.27      0.12    -0.02      0.2  \n",
+       "8            0.04     0.06           None      0.22     -0.2    0.126  \n",
+       "9            0.05     0.01           0.09      None    -0.05    0.062  \n",
+       "10           0.02     -0.0          -0.07     -0.04     None    0.069  \n",
+       "11                                                                     \n",
+       "12           0.65      0.4           0.82      0.62     0.83           \n",
+       "13           0.71      0.2           0.58      0.63      0.9           "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def simple(t):\n",
+    "    data = df[rates_tickers].copy()\n",
+    "    # Calculating our changes\n",
+    "    for ticker in data:\n",
+    "        data[f'{ticker}_c'] = data[ticker].diff(-t)\n",
+    "\n",
+    "    #Train, test split\n",
+    "    data = data.dropna()\n",
+    "    changes = data[[x for x in data if x.endswith('_c')]]\n",
+    "    changes_training = changes[changes.index < '2023-1-1']\n",
+    "    changes_testing = changes[changes.index >= '2023-1-1']\n",
+    "    causalities = pd.DataFrame()\n",
+    "    causalities['Predictor'] = [codes_back[x] for x in rates_tickers] + ['', 'Training r2', 'Testing r2']\n",
+    "\n",
+    "    # Building model and storing results for each rate as the target, making df to see results\n",
+    "    for i, target in enumerate(changes.columns):\n",
+    "        training_X = changes_training[[x for x in changes_training if x != target]]\n",
+    "        training_y = changes_training[target]\n",
+    "        testing_X = changes_testing[[x for x in changes_testing if x != target]]\n",
+    "        testing_y = changes_testing[target]\n",
+    "        model = LinearRegression()\n",
+    "        model.fit(training_X, training_y)\n",
+    "        training_prediction = model.predict(training_X)\n",
+    "        testing_prediction = model.predict(testing_X)\n",
+    "        training_r2 = r2_score(training_y, training_prediction)\n",
+    "        testing_r2 = r2_score(testing_y, testing_prediction)\n",
+    "        coefficients = [round(x,2) for x in model.coef_]\n",
+    "        coefficients.insert(i, None)\n",
+    "        coefficients.insert(len(coefficients), '')\n",
+    "        coefficients.insert(len(coefficients), round(training_r2, 2))\n",
+    "        coefficients.insert(len(coefficients), round(testing_r2, 2))\n",
+    "        causalities[f'y: {codes_back[target[:-2]]}'] = coefficients\n",
+    "    causalities['ABS Mean'] = [causalities.iloc[i, 1:].dropna().abs().mean() for i in range(11)] + ['', '', '']\n",
+    "    \n",
+    "    return causalities\n",
+    "\n",
+    "simple(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multi-t model. More complex\n",
     "##### In this model, instead of just using changes in predictors over time span t to predict changes in target over time span t, we also use changes over other t values for the predictor and the target itself as predictors. This helps the model pick up on some momentum factors (as much as a linear regression can). Best model would likely be a neural network where some nodes can really pick up on momentum"
    ]
@@ -923,9 +1292,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "G10_RV",
    "language": "python",
-   "name": "python3"
+   "name": "g10_rv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -937,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
