--- a/G10_RV.ipynb
+++ b/G10_RV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "2024-03-25  0.6540  0.6003  151.42  10.7165  0.8994   4.9587  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "13           0.71      0.2           0.57      0.63      0.9           "
       ]
      },
-     "execution_count": 215,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,6 +1283,18 @@
    "display_name": "G10_RV",
    "language": "python",
    "name": "g10_rv"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
