Readme.md Update w/o Neural Code Running

--- a/G10_RV.ipynb
+++ b/G10_RV.ipynb
@@ -393,12 +393,12 @@
     "    performances['Country'] = codes.keys()\n",
     "    performances['r2: Simple'] = performances['Country'].apply(lambda x: predictor('simple', x, t)[2])\n",
     "    performances['r2: Multi'] = performances['Country'].apply(lambda x: predictor('multi', x, t)[2])\n",
-    "    performances['r2: Neural'] = performances['Country'].apply(lambda x: predictor('neural', x, t)[2])\n",
+    "    # performances['r2: Neural'] = performances['Country'].apply(lambda x: predictor('neural', x, t)[2])\n",
     "    performances = performances.set_index('Country')\n",
     "    simple_mean = round(performances['r2: Simple'].mean(), 2)\n",
     "    multi_mean = round(performances['r2: Multi'].mean(), 2)\n",
-    "    nn_mean = round(performances['r2: Neural'].mean(), 2)\n",
-    "    performances.loc['Mean'] = {'r2: Simple': simple_mean, 'r2: Multi': multi_mean, 'r2: Neural': nn_mean}\n",
+    "    # nn_mean = round(performances['r2: Neural'].mean(), 2)\n",
+    "    performances.loc['Mean'] = {'r2: Simple': simple_mean, 'r2: Multi': multi_mean}\n",
     "    return performances\n",
     "\n",
     "performance(10)"
