Readme.md W/ Neural Network

--- a/G10_RV.ipynb
+++ b/G10_RV.ipynb
@@ -321,7 +321,6 @@
    ],
    "source": [
     "def predictor(method, target, t):\n",
-    "\n",
     "    data = df.copy()\n",
     "    target = codes[target]\n",
     "    target_t = f'{target}_{t}'\n",
@@ -377,7 +376,7 @@
     "        ])\n",
     "        model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "        early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=20)\n",
-    "        model.fit(training_X, training_y, epochs=200, validation_split=0.2, callbacks=[early_stopping])\n",
+    "        model.fit(training_X, training_y, epochs=200, validation_split=0.2, callbacks=[early_stopping], verbose=0)\n",
     "        training_prediction = model.predict(training_X)\n",
     "        testing_prediction = model.predict(testing_X)\n",
     "        training_accuracy = round(r2_score(training_y, training_prediction), 2)\n",
@@ -393,12 +392,12 @@
     "    performances['Country'] = codes.keys()\n",
     "    performances['r2: Simple'] = performances['Country'].apply(lambda x: predictor('simple', x, t)[2])\n",
     "    performances['r2: Multi'] = performances['Country'].apply(lambda x: predictor('multi', x, t)[2])\n",
-    "    # performances['r2: Neural'] = performances['Country'].apply(lambda x: predictor('neural', x, t)[2])\n",
+    "    performances['r2: Neural'] = performances['Country'].apply(lambda x: predictor('neural', x, t)[2])\n",
     "    performances = performances.set_index('Country')\n",
     "    simple_mean = round(performances['r2: Simple'].mean(), 2)\n",
     "    multi_mean = round(performances['r2: Multi'].mean(), 2)\n",
-    "    # nn_mean = round(performances['r2: Neural'].mean(), 2)\n",
-    "    performances.loc['Mean'] = {'r2: Simple': simple_mean, 'r2: Multi': multi_mean}\n",
+    "    nn_mean = round(performances['r2: Neural'].mean(), 2)\n",
+    "    performances.loc['Mean'] = {'r2: Simple': simple_mean, 'r2: Multi': multi_mean, 'r2: Neural': nn_mean}\n",
     "    return performances\n",
     "\n",
     "performance(10)"
